<resources>
    <string name="app_name">LikEat</string>
    <string name="facebook_AppId">864515457025932</string>
    <string name="action_settings">Settings</string>
    <string name="action_my_account">My Account</string>
    <string name="action_my_orders">My Orders</string>
    <string name="action_my_bookings">My Bookings</string>
    <string name="action_wishlist">Short List</string>
    <string name="action_checkin">Check In</string>
    <string name="action_logout">Logout</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_registration">Sign Up</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_offer">Offers</string>
    <string name="title_activity_hotel_profile">Profile</string>
    <string name="title_fragment_your_profile">My Profile</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_fragment_policy">Privacy Policy</string>
    <string name="title_fragment_terms_of_service">Terms of service</string>
    <string name="title_detail">Detail</string>
    <string name="title_activity_check_out">Address</string>
    <string name="title_activity_offer_detail">Offer Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_fragment_profile">Hotel Profile</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_add_booking_fragment">Add Booking</string>
    <string name="title_add_address_fragment">Address</string>
    <string name="title_cart_item_fragment">Orders</string>
    <string name="title_item_modifier_remark">Add Detail</string>
    <string name="title_order_summary_fragment">Order Summary</string>
    <string name="title_home">Home</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_fragment_change_password">Change Password</string>
    <string name="title_activity_wish_list">Short List</string>
    <string name="title_activity_my_account">My Account</string>
    <string name="title_activity_my_order">YourOrderActivity</string>
    <string name="title_activity_contactus">Contact Us</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_business_branch">Select City and Branch</string>
    <string name="MsgValidation">Please correct the errors</string>
    <string name="MsgNoRecord">No record found.</string>
    <string name="MsgNoCartItem">Cart is Empty.</string>
    <string name="MsgAlreadyExist">Record already exist</string>
    <string name="MsgInsertFail">Failed to insert record</string>
    <string name="MsgInsertSuccess">Record inserted successfully</string>
    <string name="MsgInsertAddressSuccess">Address inserted successfully</string>
    <string name="MsgUpdateAddressSuccess">Address updated successfully</string>
    <string name="MsgReviewInsertSuccess">Review inserted successfully</string>
    <string name="MsgDeleteFail">Failed to delete record</string>
    <string name="MsgDeleteSuccess">Record deleted successfully</string>
    <string name="MsgUpdateFail">Failed to update record</string>
    <string name="MsgUpdateSuccess">Record updated successfully</string>
    <string name="MsgSelectFail">Failed to select record</string>
    <string name="MsgCheckConnection">Please check internet connection</string>
    <string name="MsgConfirmDelete">Delete Record?</string>
    <string name="MsgConfirmLogout">Are you sure to Logout?</string>
    <string name="MsgConfirmSettings">Push notification off?</string>
    <string name="MsgServerNotResponding">Server not responding, Try again later</string>
    <string name="MsgFeedback">Thank you for your feedback, your response will help us to improve the quality of service.</string>
    <string name="MsgVerification">Your Phone Number is Verified.</string>
    <string name="MsgDineOnly">Available for Dine-In only</string>
    <string name="MsgFeedbackSubmit">Feedback is submitted</string>
    <string name="MsgCart">Cart is empty.</string>
    <string name="MsgCartItem">%s is added to cart</string>
    <string name="MsgWishListItem">%s is added to Wishlist.</string>
    <string name="MsgConfirmOrder">Items are place into order</string>
    <string name="MsgAddPerson">Person is added successfully</string>
    <string name="MsgUpdateProfile">Profile updated successfully</string>
    <string name="MsgUpdateprofileFail">Failed to update profile</string>
    <string name="MsgUpdatePassword">Password changed successfully</string>
    <string name="MsgOldPassword">Old password is not correct</string>
    <string name="MsgOffer">Currently no offers available.</string>
    <string name="MsgGallery">No Images Yet.</string>
    <string name="MsgItem">There is no item.</string>
    <string name="MsgChangeMode">Switch to waiter mode?</string>
    <string name="MsgCancelOrder">Order Payment is done</string>
    <string name="MsgCancelBooking">Booking Payment is done.</string>
    <string name="MsgBookingIsAAvailable">Booking slot is not available</string>
    <string name="MsgOfferCodeFailed">Offer Not Valid</string>
    <string name="MsgOfferCodeSuccess">Offer Applied</string>
    <string name="MsgCartItemDelete">%s is deleted from the cart</string>
    <string name="MsgNotification">There is no notification</string>
    <string name="MsgNoAddress">There is no address</string>
    <string name="MsgOrder">Order placed successfully.</string>
    <string name="MsgEnquiry">Enquiry done successfully.</string>
    <string name="suAgree">By Signing up you will agree</string>
    <string name="suPrivacyPolicy">Privacy Policy</string>
    <string name="suAnd">and</string>
    <string name="suTerms">Terms of Service</string>
    <string name="suSignUp">Sign Up</string>
    <string name="suSignIn">Sign In</string>
    <string name="suAlreadyRegistered">Already Registered?</string>
    <string name="suFirstName">First Name</string>
    <string name="suValidEmail">Valid Email</string>
    <string name="suValidConfirmPassword">Confirm Password is not matched</string>
    <string name="suLastName">Last Name</string>
    <string name="suEmail">Email</string>
    <string name="suPhone">Mobile</string>
    <string name="suPassword">Password</string>
    <string name="suConfirmPassword">Confirm Password</string>
    <string name="suMale">Male</string>
    <string name="suFemale">Female</string>
    <string name="suGender">Gender</string>
    <string name="suBirthDate">Birth Date</string>
    <string name="suUpdate">Update Profile</string>
    <string name="suSelect">\u2013SELECT\u2013</string>
    <string name="suCountry">\u2013SELECT COUNTRY\u2013</string>
    <string name="suState">\u2013SELECT STATE\u2013</string>
    <string name="suCity">\u2013SELECT CITY\u2013</string>
    <string name="suArea">\u2013SELECT AREA\u2013</string>
    <string name="suWithFacebook">SignUp with Facebook</string>
    <string name="suWithGoogle">SignUp with Google+</string>
    <string name="plus">\u002B</string>
    <string name="minus">\u2212</string>
    <string name="siLoginWithFb">Login with Facebook</string>
    <string name="siLoginWithGplus">Login with Google+</string>
    <string name="abLegal">Legal</string>
    <string name="abApp">About This</string>
    <string name="abPolicy">Privacy Policy</string>
    <string name="abTerms">Terms Of Service</string>
    <string name="abBuildVersion">Build Version</string>
    <string name="abVersionCode">Version Code</string>
    <string name="abVersionName">Version Name</string>
    <string name="upUpdateprofile">Update Profile</string>
    <string name="siUserName">User Name</string>
    <string name="siPassword">Password</string>
    <string name="siSignIn">Sign In</string>
    <string name="siNewUser">New User?</string>
    <string name="siSignupHere">Sign Up</string>
    <string name="siLoginFailedMsg">Username or Password are invalid.</string>
    <string name="siLoginSuccessMsg">Logged in successfully.</string>
    <string name="siIntegrationLoginMsg">Add another account for login.</string>
    <string name="clear_text">Clear Text</string>
    <string name="siLoginMsg">No User</string>
    <string name="haGetDelivery">Get Delivery</string>
    <string name="haTakeAway">Take Away</string>
    <string name="haBookTable">Book Table</string>
    <string name="haOffer">Offers</string>
    <string name="haFb">Facebook</string>
    <string name="haGoogle">Google+</string>
    <string name="haTwitter">Twitter</string>
    <string name="haInst">Instagram</string>
    <string name="haLinked">LinkedIn</string>
    <string name="haPinterest">Pinterest</string>
    <string name="haYouTube">YouTube</string>
    <string name="navProfile">Company Profile</string>
    <string name="navOffers">Offers</string>
    <string name="navNotification">Notification</string>
    <string name="navFeedback">Feedback</string>
    <string name="navShare">Share</string>
    <string name="navRate">Rate</string>
    <string name="navAboutUs">About Us</string>
    <string name="navContactUs">Contact Us</string>
    <string name="navExit">Exit</string>
    <string name="navOpen">Open</string>
    <string name="navClose">Close</string>
    <string name="HoBackMsg">Press again to exit.</string>
    <string name="rTimings">Timings</string>
    <string name="rTo">To</string>
    <string name="rExpiresOn">Expires On</string>
    <string name="mAVeg">Veg</string>
    <string name="mANonVeg">Non Veg</string>
    <string name="mAJain">Jain</string>
    <string name="mAViewChange">View Change</string>
    <string name="mACart">Cart</string>
    <string name="cifRemark">Remark</string>
    <string name="cifAddMore">Add More</string>
    <string name="cifConfirmOrder">Confirm Order</string>
    <string name="cifQty">Qty</string>
    <string name="cifItem">Item</string>
    <string name="cifRupee">\u20B9</string>
    <string name="cifAmount">Amount</string>
    <string name="cifRate">Rate</string>
    <string name="cifTotalAmount">Total Amount</string>
    <string name="cifNumber">0.00</string>
    <string name="cifDiscount">Discount</string>
    <string name="cifRounding">Rounding Off</string>
    <string name="cifNetAmount">Net Amount</string>
    <string name="cifConfirmClear">Are you sure to clear Order?</string>
    <string name="cifMsg">Go to Menu</string>
    <string name="cifMinOrder">Minimum Order \u20B9 300</string>
    <string name="cifEditMessage">Tap item to edit quantity</string>
    <string name="daAdd">Add</string>
    <string name="daCancel">Cancel</string>
    <string name="daItemSuggestion">Item Suggestion</string>
    <string name="aiqRemark">Remark</string>
    <string name="osfCheckOut">Check Out</string>
    <string name="osfAddMore">Add More</string>
    <string name="ybCustomerName">Person Name</string>
    <string name="ybAdults">Adults</string>
    <string name="ybChildren">Children</string>
    <string name="ybFromTime">From Time</string>
    <string name="ybToTime">To Time</string>
    <string name="ybEmail">Email</string>
    <string name="ybRemark">Remark</string>
    <string name="ybBook">Book</string>
    <string name="yaOffice">Office</string>
    <string name="yaHome">Home</string>
    <string name="yaName">Customer Name</string>
    <string name="yaAddress">Address</string>
    <string name="yaCountry">\u2013\u2013COUNTRY\u2013\u2013</string>
    <string name="yaState">\u2013\u2013STATE\u2013\u2013</string>
    <string name="yaCity">\u2013\u2013CITY\u2013\u2013</string>
    <string name="yaArea">\u2013\u2013AREA\u2013\u2013</string>
    <string name="yaZip">Zip Code</string>
    <string name="yaMobileNum">Mobile Number</string>
    <string name="yaAdd">Add</string>
    <string name="retry">Retry</string>
</resources>