<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/MyAccount"
        android:orderInCategory="100"
        android:title="@string/action_my_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/MyOrders"
        android:orderInCategory="100"
        android:title="@string/action_my_orders"
        app:showAsAction="never" />

    <item
        android:id="@+id/MyBookings"
        android:orderInCategory="100"
        android:title="@string/action_my_bookings"
        app:showAsAction="never" />

    <item
        android:id="@+id/wishlist"
        android:orderInCategory="100"
        android:title="@string/action_wishlist"
        app:showAsAction="never" />

    <item
        android:id="@+id/checkin"
        android:orderInCategory="100"
        android:title="@string/action_checkin"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/viewChange"
        android:icon="@drawable/view_selector"
        android:orderInCategory="300"
        android:title="@string/mAViewChange"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/cart_layout"
        android:orderInCategory="400"
        android:title="@string/mACart"
        android:visible="false"
        app:actionLayout="@layout/cart_layout"
        app:showAsAction="always" />

</menu>