<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.arraybit.abposw.HomeActivity">
    <item
        android:id="@+id/MyAccount"
        android:orderInCategory="100"
        android:title="@string/action_my_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/MyOrders"
        android:orderInCategory="100"
        android:title="@string/action_my_orders"
        app:showAsAction="never" />

    <item
        android:id="@+id/MyBookings"
        android:orderInCategory="100"
        android:title="@string/action_my_bookings"
        app:showAsAction="never" />

    <item
        android:id="@+id/wishlist"
        android:orderInCategory="100"
        android:title="@string/action_wishlist"
        app:showAsAction="never" />

    <item
        android:id="@+id/checkin"
        android:orderInCategory="100"
        android:title="@string/action_checkin"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
