<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.arraybit.abposw.AddAddressFragment">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/control_SpecingSmall"
        android:layout_marginStart="@dimen/control_SpecingSmall"
        android:layout_marginTop="@dimen/control_SpecingSmall"
        android:layout_weight=".6"
        android:gravity="center"
        android:orientation="horizontal">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:checked="true"
            android:textOff="@string/yaHome"
            android:textOn="@string/yaHome" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:checked="false"
            android:textOff="@string/yaOffice"
            android:textOn="@string/yaOffice" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/control_SpecingMedium"
        android:layout_marginStart="@dimen/control_SpecingMedium"
        android:layout_marginTop="@dimen/control_SpecingSmall"
        android:layout_weight="6"
        android:orientation="vertical">

        <com.rey.material.widget.EditText
            android:id="@+id/etName"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yaName" />

        <com.rey.material.widget.EditText
            android:id="@+id/etAddress"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:hint="@string/yaAddress"
            android:inputType="textMultiLine" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spCountry"
            style="@style/Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yaCountry" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spState"
            style="@style/Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yaState" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spCity"
            style="@style/Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yaCity" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spArea"
            style="@style/Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yaArea" />

        <com.rey.material.widget.EditText
            android:id="@+id/etZip"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yaZip"
            android:inputType="number" />

        <com.rey.material.widget.EditText
            android:id="@+id/etMobile"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yaMobileNum"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/control_SpecingTiny"
        android:layout_marginEnd="@dimen/control_SpecingTiny"
        android:layout_marginStart="@dimen/control_SpecingTiny"
        android:layout_weight=".7"
        android:orientation="vertical">

        <com.rey.material.widget.Button
            android:id="@+id/btnAddress"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/yaAdd" />
    </LinearLayout>


</LinearLayout>
