<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offwhite"
    tools:context="com.arraybit.abposw.OrderSummaryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.rey.material.widget.TextView
                android:id="@+id/txtMsg"
                style="@style/ErrorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <com.rey.material.widget.CompoundButton
                android:id="@+id/cbMenu"
                style="@style/CompoundButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="1dp"
                android:paddingStart="1dp"
                android:text="@string/cifMsg"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/control_SpecingTiny">

            <com.rey.material.widget.TextView
                android:id="@+id/txtHeaderItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="start|center"
                android:paddingEnd="0dp"
                android:paddingStart="@dimen/control_SpecingTiny"
                android:text="@string/cifItem"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <com.rey.material.widget.TextView
                android:id="@+id/txtHeaderNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:gravity="center"
                android:text="@string/cifQty"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <com.rey.material.widget.TextView
                android:id="@+id/txtHeaderRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.22"
                android:gravity="center|end"
                android:text="@string/cifRate"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <com.rey.material.widget.TextView
                android:id="@+id/txtHeaderAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center|end"
                android:text="@string/cifAmount"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <com.rey.material.widget.TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/control_SpecingSmall"
                android:layout_weight="0.14"
                android:gravity="center|end"
                android:textColor="@android:color/white"
                android:visibility="invisible" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvCartItem"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="@dimen/control_SpecingSmall"
            android:layout_weight="0.75"
            android:visibility="invisible"/>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/control_SpecingTiny"
            android:layout_marginEnd="@dimen/control_SpecingSmall"
            android:layout_marginStart="@dimen/control_SpecingSmall"
            android:layout_marginTop="@dimen/control_SpecingTiny"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <com.rey.material.widget.Button
                android:id="@+id/btnAddMore"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/osfAddMore"
                tools:ignore="NestedWeights" />

            <com.rey.material.widget.Button
                android:id="@+id/btnConfirmOrder"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/control_SpecingSmall"
                android:layout_weight="1"
                android:text="@string/osfCheckOut" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
